# libQuotient

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  .valgrind.qmc-example.supp  CMakeLists.txt  CODE_GENERATION.md  CONTRIBUTING.md  Doxyfile  ISSUE_TEMPLATE.md  Makefile  QMatrixClient.pc.in  Quotient.pc.in  README.md  SECURITY.md  avatar.cpp  avatar.h  connection.cpp  connection.h  connectiondata.cpp  connectiondata.h  connectionprivate.cpp  connectionprivate.h  converters.h  debug.cpp  encryptionmanager.cpp  encryptionmanager.h  joinstate.h  json.cpp  json.h  kcoreaddons_export.h  libQuotient.kdev4  libqmatrixclient.pri  libquotient.pri  logging.cpp  logging.h  logging_util.h  (+19 more)
autotests/: CMakeLists.txt  adjust-config.sh  callcandidateseventtest.cpp  callcandidateseventtest.h  cross_signing_data.json  key-export.data  register-users.sh  run-tests.sh  setup-tests.sh  testblurhash.cpp  testcrosssigning.cpp  testcryptoutils.cpp  testcryptoutils.h  testfilecrypto.cpp  testfilecrypto.h  testgroupsession.cpp  testgroupsession.h  testkeyimport.cpp  testkeyverification.cpp  testkeyverification.h  testolmaccount.cpp  testolmaccount.h  testolmsession.cpp  testolmsession.h  testolmutility.cpp  testolmutility.h  testutils.cpp  testutils.h  utiltests.cpp
examples/: CMakeLists.txt  qmc-example.cpp
lib/: CMakeLists.txt  accountregistry.cpp  accountregistry.h  avatar.cpp  avatar.h  connection.cpp  connection.h  connection_p.h  connectiondata.cpp  connectiondata.h  converters.cpp  converters.h  database.cpp  database.h  e2ee.h  encryptionmanager.cpp  encryptionmanager.h  eventitem.cpp  eventitem.h  eventstats.cpp  eventstats.h  expected.h  filetransfer.cpp  filetransfer.h  function_traits.cpp  function_traits.h  joinstate.h  keyverificationsession.cpp  keyverificationsession.h  logging.cpp  logging.h  mxcreply.cpp  mxcreply.h  networkaccessmanager.cpp  networkaccessmanager.h  networksettings.cpp  networksettings.h  omittable.cpp  omittable.h  qt_connection_util.h  (+26 more)
lib/application-service/definitions/: location.cpp  location.h  location_batch.cpp  location_batch.h  protocol.cpp  protocol.h  protocol_metadata.cpp  protocol_metadata.h  user.cpp  user.h  user_batch.cpp  user_batch.h
lib/crypto/: e2ee.h  encryptionmanager.cpp  encryptionmanager_p.h  errors.cpp  errors.h  message.cpp  message.h  qolmaccount.cpp  qolmaccount.h  qolmerrors.cpp  qolmerrors.h  qolminboundsession.cpp  qolminboundsession.h  qolmmessage.cpp  qolmmessage.h  qolmoutboundsession.cpp  qolmoutboundsession.h  qolmsession.cpp  qolmsession.cpp.back  qolmsession.h  qolmsession.h.back  qolmutility.cpp  qolmutility.h  qolmutils.cpp  qolmutils.h  session.cpp  session.h  utils.cpp  utils.h
lib/csapi/: account-data.cpp  account-data.h  admin.cpp  admin.h  administrative_contact.cpp  administrative_contact.h  appservice_room_directory.cpp  appservice_room_directory.h  banning.cpp  banning.h  capabilities.cpp  capabilities.h  content-repo.cpp  content-repo.h  create_room.cpp  create_room.h  cross_signing.cpp  cross_signing.h  device_management.cpp  device_management.h  directory.cpp  directory.h  event_context.cpp  event_context.h  filter.cpp  filter.h  gtad.yaml  inviting.cpp  inviting.h  joining.cpp  joining.h  keys.cpp  keys.h  kicking.cpp  kicking.h  knocking.cpp  knocking.h  leaving.cpp  leaving.h  list_joined_rooms.cpp  (+77 more)
lib/csapi/definitions/: auth_data.cpp  auth_data.h  client_device.cpp  client_device.h  cross_signing_key.h  device_keys.cpp  device_keys.h  event_filter.cpp  event_filter.h  openid_token.h  public_rooms_chunk.h  public_rooms_response.cpp  public_rooms_response.h  push_condition.cpp  push_condition.h  push_rule.cpp  push_rule.h  push_ruleset.cpp  push_ruleset.h  request_email_validation.h  request_msisdn_validation.h  request_token_response.h  room_event_filter.cpp  room_event_filter.h  sync_filter.cpp  sync_filter.h  third_party_signed.h  user_identifier.cpp  user_identifier.h
lib/e2ee/: e2ee.h  e2ee_common.cpp  e2ee_common.h  qolmaccount.cpp  qolmaccount.h  qolmerrors.cpp  qolmerrors.h  qolminboundsession.cpp  qolminboundsession.h  qolmmessage.cpp  qolmmessage.h  qolmoutboundsession.cpp  qolmoutboundsession.h  qolmsession.cpp  qolmsession.h  qolmutility.cpp  qolmutility.h  qolmutils.cpp  qolmutils.h
lib/events/: accountdataevents.h  callanswerevent.cpp  callanswerevent.h  callcandidatesevent.cpp  callcandidatesevent.h  callevents.cpp  callevents.h  callhangupevent.cpp  callhangupevent.h  callinviteevent.cpp  callinviteevent.h  directchatevent.cpp  directchatevent.h  encryptedevent.cpp  encryptedevent.h  encryptedfile.cpp  encryptedfile.h  encryptionevent.cpp  encryptionevent.h  event.cpp  event.h  eventcontent.cpp  eventcontent.h  eventloader.h  eventrelation.cpp  eventrelation.h  filesourceinfo.cpp  filesourceinfo.h  joinrulesevent.cpp  joinrulesevent.h  keyverificationanevent.cpp  keyverificationanevent.h  keyverificationevent.cpp  keyverificationevent.h  reactionevent.cpp  reactionevent.h  receiptevent.cpp  receiptevent.h  redactionevent.cpp  redactionevent.h  (+25 more)
lib/identity/definitions/: request_email_validation.cpp  request_email_validation.h  (+4 more)
lib/jobs/: basejob.cpp  basejob.h  checkauthmethods.cpp  checkauthmethods.h  downloadfilejob.cpp  downloadfilejob.h  gtad.yaml  joinroomjob.cpp  joinroomjob.h  mediathumbnailjob.cpp  mediathumbnailjob.h  postreadmarkersjob.h  postreceiptjob.cpp  postreceiptjob.h  requestdata.cpp  requestdata.h  sendeventjob.cpp  sendeventjob.h  setroomstatejob.h  syncjob.cpp  syncjob.h  turnserverjob.cpp  turnserverjob.h  {{base}}.cpp.mustache  {{base}}.h.mustache
lib/olm/: e2ee.h  errors.cpp  errors.h  message.cpp  message.h  qolmaccount.cpp  qolmaccount.h  qolminboundsession.cpp  qolminboundsession.h  qolmoutboundsession.cpp  qolmoutboundsession.h  qolmsession.cpp  qolmsession.h  session.cpp  session.h  utils.cpp  utils.h
matrix-rust-sdk-crypto/: Cargo.toml  build.rs
matrix-rust-sdk-crypto/src/: lib.rs
quotest/: CMakeLists.txt  quotest.cpp
tests/: .valgrind.supp  CMakeLists.txt  callcandidateseventtest.cpp  quotest.cpp
(+434 files in other folders)
